Added code experiment item_sort and code cleaning

--- a/React-Todo-list-main/src/App.css
+++ b/React-Todo-list-main/src/App.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  background: #8758ff;
+  background: linear-gradient(135deg, #3b86d5 0%, #121c5c 100%);
   display: flex;
   justify-content: center;
   align-items: center;
