--- a/android-todo-list/architecture-samples-main/app/src/main/res/values/colors.xml
+++ b/android-todo-list/architecture-samples-main/app/src/main/res/values/colors.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
      Copyright 2019 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
@@ -20,6 +19,7 @@
     <color name="colorAccent">#2E7D32</color>
     <color name="colorTextPrimary">#000000</color>
     <color name="colorGrey">#757575</color>
+    <color name="white">#FFFFFF</color>
 
     <drawable name="completedTaskBackground">#CCCCCC</drawable>
 
